se realizaron cambios a detalles en css de centralizado en ciertos elementos en todos los html, también algunos cambios en mediaquerie

--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -56,7 +56,7 @@
     </figcaption>
  </figure>
 
-<h2 class="como-trabajo">Cómo trabajo?</h2>
+<h2 class="como-trabajo">¿Cómo trabajo?</h2>
 <figure class="trabajo-img">
     <img src="../img/chicoplancha.webp" alt="foto de pesa grande tipo peso muerto">
     <figcaption>
