se agregó nuevo y último html resultados.html y también modificado en css completo, usando flex y demás todo de 0

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <li class="nav-item">
           <a class="nav-link" href="pages/empezar.html">Empezar</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="pages/resultados.html">Resultados</a>
+        </li>
       </ul>
     </div>
   </div>
