--- a/pages/resultados.html
+++ b/pages/resultados.html
@@ -3,9 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Resultados</title>
 </head>
 <body>
      
+<header>
+
+     <h1 class="fw-bold">Entrenamiento personalizado para vos</h1>
+
+<nav class="navbar navbar-expand-lg navbar-light mi-navbar">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="sobre-mi.html">Sobre mí</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="planes.html">Planes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="empezar.html">Empezar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="resultados.html">Resultados</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+</header>
+
+<main class="general-resultados">
+    <div class="resultados-alumnos">
+    <h2>Resultados y opiniones de mis alumnos</h2>
+    </div>
+
+      <section class="contenedor-cards">
+    <div class="card-testimonio">
+        <h3>Antonella, 28 años</h3>
+        <img src="../img/antes y despues mujer 1.jpg" alt="mujer-uno">
+        <p>
+            "Arranqué con bastante sobrepeso y cero confianza en mí. Al principio
+            me costaba todo, pero los entrenamientos fueron adaptados a mi ritmo
+            y nunca me sentí juzgada. Con el tiempo no solo bajé de peso, sino que
+            gané fuerza, energía y seguridad. Hoy me siento mucho más saludable y
+            orgullosa de lo que logré."
+        </p>
+        <p class="usuario"></p>
+
+    </div>
+    
+    <div class="card-testimonio">
+        <h3>Roman, 26 años</h3>
+        <img src="../img/antes y despues hombre 1.jpg" alt="hombre-uno">
+        <p>
+            “Con 26 años ya sentía que el sobrepeso me estaba pasando factura.
+            Me cansaba fácil y no me sentía cómodo con mi cuerpo. Empecé a entrenar
+            de a poco, con rutinas adaptadas, y eso hizo que pudiera ser constante.
+            Bajé de peso, gané resistencia y hoy me siento mucho más activo y
+            seguro. No fue solo un cambio físico, también cambió mi cabeza.”
+        </p>
+    </div>
+ 
+        <div class="card-testimonio">
+        <h3>Matias, 31 años</h3>
+        <img src="../img/hombre p antes y despues 2.jpg" alt="hombre-entrenando-en-casa">
+        <p>
+            “Me costaba encontrar tiempo para ir al gimnasio, así que entrenar en casa fue 
+            la solución perfecta. Arranqué con poca constancia, pero tener rutinas claras y 
+            adaptadas a mi espacio hizo toda la diferencia. Bajé de peso, gané fuerza y ahora 
+            entrenar es parte de mi rutina. Me siento más saludable y con mucha más energía en el día a día.”
+        </p>
+    </div>
+
+    <div class="card-testimonio">
+        <h3>Anabella, 40 años</h3>
+        <img src="../img/mujer p antes y despues 1.jpg" alt="hombre-entrenando-en-casa">
+        <p>
+            “Entrenar en casa con el acompañamiento de Tomi fue clave para mantenerme constante 
+            durante años. Gracias a rutinas adaptadas y seguimiento personalizado, no solo me mantuve 
+            activa, sino que logré un estado físico que hoy sorprende a todos. Me siento fuerte, ágil y
+             con más energía que nunca. El entrenamiento ya es parte de mi vida.” </p>
+    </div>
+
+      </section>
+
+<section class="mentalidad-d">
+  <h2>La constancia supera a la motivación</h2>
+  <p>
+    No siempre vas a tener ganas de entrenar, pero crear el hábito
+    es lo que realmente genera resultados a largo plazo.
+  </p>
+</section>
+
+
+
+</main>
+
+<footer></footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
