--- a/pages/empezar.html
+++ b/pages/empezar.html
@@ -33,6 +33,9 @@
         <li class="nav-item">
           <a class="nav-link active" href="empezar.html">Empezar</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="resultados.html">Resultados</a>
+        </li>
       </ul>
     </div>
 </nav>
