--- a/pages/planes.html
+++ b/pages/planes.html
@@ -35,6 +35,9 @@
         <li class="nav-item">
           <a class="nav-link" href="empezar.html">Empezar</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="resultados.html">Resultados</a>
+        </li>
       </ul>
     </div>
   </div>
