--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -34,6 +34,9 @@
         <li class="nav-item">
           <a class="nav-link" href="empezar.html">Empezar</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="resultados.html">Resultados</a>
+        </li>
       </ul>
     </div>
   </div>
