se agregó el 'último html que me faltaba de 0, con su respectivo css y mediaquerie, perfeccionamiento a todos los htmls para que se vean visualmente mas ordenados

--- a/pages/resultados.html
+++ b/pages/resultados.html
@@ -53,11 +53,7 @@
         <h3>Antonella, 28 años</h3>
         <img src="../img/antes y despues mujer 1.jpg" alt="mujer-uno">
         <p>
-            "Arranqué con bastante sobrepeso y cero confianza en mí. Al principio
-            me costaba todo, pero los entrenamientos fueron adaptados a mi ritmo
-            y nunca me sentí juzgada. Con el tiempo no solo bajé de peso, sino que
-            gané fuerza, energía y seguridad. Hoy me siento mucho más saludable y
-            orgullosa de lo que logré."
+            "Arranqué con bastante sobrepeso y cero confianza en mí. Al principio me costaba todo, pero los entrenamientos fueron adaptados a mi ritmo y nunca me sentí juzgada. Con el tiempo no solo bajé de peso, sino que gané fuerza, energía y seguridad. Hoy me siento mucho más saludable y orgullosa de lo que logré."
         </p>
         <p class="usuario"></p>
 
@@ -67,11 +63,7 @@
         <h3>Roman, 26 años</h3>
         <img src="../img/antes y despues hombre 1.jpg" alt="hombre-uno">
         <p>
-            “Con 26 años ya sentía que el sobrepeso me estaba pasando factura.
-            Me cansaba fácil y no me sentía cómodo con mi cuerpo. Empecé a entrenar
-            de a poco, con rutinas adaptadas, y eso hizo que pudiera ser constante.
-            Bajé de peso, gané resistencia y hoy me siento mucho más activo y
-            seguro. No fue solo un cambio físico, también cambió mi cabeza.”
+            “Con 26 años ya sentía que el sobrepeso me estaba pasando factura. Me cansaba fácil y no me sentía cómodo con mi cuerpo. Empecé a entrenar de a poco, con rutinas adaptadas, y eso hizo que pudiera ser constante. Bajé de peso, gané resistencia y hoy me siento mucho más activo y seguro. No fue solo un cambio físico, también cambió mi cabeza.”
         </p>
     </div>
  
@@ -79,10 +71,7 @@
         <h3>Matias, 31 años</h3>
         <img src="../img/hombre p antes y despues 2.jpg" alt="hombre-entrenando-en-casa">
         <p>
-            “Me costaba encontrar tiempo para ir al gimnasio, así que entrenar en casa fue 
-            la solución perfecta. Arranqué con poca constancia, pero tener rutinas claras y 
-            adaptadas a mi espacio hizo toda la diferencia. Bajé de peso, gané fuerza y ahora 
-            entrenar es parte de mi rutina. Me siento más saludable y con mucha más energía en el día a día.”
+            “Me costaba encontrar tiempo para ir al gimnasio, así que entrenar en casa fue la solución perfecta. Arranqué con poca constancia, pero tener rutinas claras y adaptadas a mi espacio hizo toda la diferencia. Bajé de peso, gané fuerza y ahora entrenar es parte de mi rutina. Me siento más saludable y con mucha más energía en el día a día.”
         </p>
     </div>
 
@@ -90,10 +79,7 @@
         <h3>Anabella, 40 años</h3>
         <img src="../img/mujer p antes y despues 1.jpg" alt="hombre-entrenando-en-casa">
         <p>
-            “Entrenar en casa con el acompañamiento de Tomi fue clave para mantenerme constante 
-            durante años. Gracias a rutinas adaptadas y seguimiento personalizado, no solo me mantuve 
-            activa, sino que logré un estado físico que hoy sorprende a todos. Me siento fuerte, ágil y
-             con más energía que nunca. El entrenamiento ya es parte de mi vida.” </p>
+            “Entrenar en casa con el acompañamiento de Tomi fue clave para mantenerme constante durante años. Gracias a rutinas adaptadas y seguimiento personalizado, no solo me mantuve activa, sino que logré un estado físico que hoy sorprende a todos. Me siento fuerte, ágil y con más energía que nunca. El entrenamiento ya es parte de mi vida.” </p>
     </div>
 
       </section>
@@ -101,8 +87,7 @@
 <section class="mentalidad-d">
   <h2>La constancia supera a la motivación</h2>
   <p>
-    No siempre vas a tener ganas de entrenar, pero crear el hábito
-    es lo que realmente genera resultados a largo plazo.
+    No siempre vas a tener ganas de entrenar, pero crear el hábito es lo que realmente genera resultados a largo plazo.
   </p>
 </section>
 
@@ -110,7 +95,23 @@
 
 </main>
 
-<footer></footer>
+<footer>
+      <div class="contenedor-footer">
+        <h4>Redes sociales</h4>
+        <ul class="lista-footer">
+          <li>Facebook</li>
+          <li>Instagram</li>
+          <li>Tiktok</li>
+        </ul>
+    
+        <h4>personaltrainertomi@hmail.com</h4>
+      </div>
+    
+      <div class="footer-creditos">
+        <p>Sitio hecho por Martu</p>
+      </div>
+
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
