--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -51,10 +51,7 @@
 <figure class="sobre-mi">
     <figcaption>
         <p>
-            Soy Tomás Nieto, personal trainer certificado, apasionado por ayudar a las personas a mejorar su calidad de
-            vida a través del entrenamiento físico. Mi objetivo es acompañarte en cada paso del proceso, adaptando los
-            entrenamientos a tus necesidades y metas personales, ya sea que busques bajar de peso, ganar fuerza o
-            mejorar tu rendimiento físico.
+            Soy Tomás Nieto, personal trainer certificado, apasionado por ayudar a las personas a mejorar su calidad de vida a través del entrenamiento físico. Mi objetivo es acompañarte en cada paso del proceso, adaptando los entrenamientos a tus necesidades y metas personales, ya sea que busques bajar de peso, ganar fuerza o mejorar tu rendimiento físico.
         </p>
     </figcaption>
  </figure>
@@ -64,9 +61,7 @@
     <img src="../img/chicoplancha.webp" alt="foto de pesa grande tipo peso muerto">
     <figcaption>
         <p>
-            Trabajo de forma personalizada, diseñando entrenamientos según el enfoque, la edad y la condición física de
-            cada persona. En caso de ser necesario, adapto los ejercicios para garantizar un entrenamiento seguro y
-            efectivo.
+            Trabajo de forma personalizada, diseñando entrenamientos según el enfoque, la edad y la condición física de cada persona. En caso de ser necesario, adapto los ejercicios para garantizar un entrenamiento seguro y efectivo.
         </p>
     </figcaption>
 </figure>
@@ -103,7 +98,6 @@
       <h3>🥗 Hábitos saludables</h3>
       <p>Creación de rutinas sostenibles para que los resultados se mantengan en el tiempo.</p>
     </div>
-
   </div>
 </section>
 
