se agregó cambios nuevos, correcciones en nombres de imagenes cambiando espacios por -, se oscureció el fondo del footer y se mejoró el checkbox de empezar.html

--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -58,7 +58,7 @@
 
 <h2 class="como-trabajo">¿Cómo trabajo?</h2>
 <figure class="trabajo-img">
-    <img src="../img/chicoplancha.webp" alt="foto de pesa grande tipo peso muerto">
+    <img src="../img/chicoplancha.webp" alt="foto-de-pesa-grande-tipo-pesomuerto">
     <figcaption>
         <p>
             Trabajo de forma personalizada, diseñando entrenamientos según el enfoque, la edad y la condición física de cada persona. En caso de ser necesario, adapto los ejercicios para garantizar un entrenamiento seguro y efectivo.
